--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ function myFunction() {
           <a href="AXS.html">AXS Pal: Interaction Design</a>
         </div>
         </div>
-          <a href="resume.html">Resume</a>
+          <a href="Resume.html">Resume</a>
       </nav>
     </div>
     </div>
